Configuring common assets

--- a/Projects/1.First steps/1.The teacher, the farmer, and the gobstones/meta.yml
+++ b/Projects/1.First steps/1.The teacher, the farmer, and the gobstones/meta.yml
@@ -5,6 +5,14 @@ attire:
     can_toggle_visibility: true
   visible: true
 blocks:
+  defaultToolbox: |
+        <category name="Primitive procedures">
+          <block type="DropAGreenStone"></block>
+          <block type="GrabARedStone"></block>
+          <block type="ChangeGreenStonesByBlueAndRedStones"></block>
+          <block type="GoToNextCell"></block>
+          <block type="GoToOrigin"></block>
+        </category>
   disabled: []
   visible: [ "COMMANDS" ]
 board:
