--- a/Projects/2.Using procedures/1.The alien pushes the button/meta.yml
+++ b/Projects/2.Using procedures/1.The alien pushes the button/meta.yml
@@ -3,12 +3,14 @@ attire:
   active: The alien pushes the button
 blocks:
   disabled: [ "Poner", "Mover", "Sacar", "IrAlBorde"
-            , "Color", "Direccion"
+						, "RepeticionSimple"
+            , "Color", "Direccion", "Numero"
             ]
-  visible: [ "COMMANDS"    , "Poner", "Mover", "Sacar", "IrAlBorde"
-                           , "Built-in procedures", "My procedures"
-           , "EXPRESSIONS" , "Color", "Direccion"
-           , "DEFINITIONS" , "procedures_defnoreturnnoparams"
+  visible: [ "COMMANDS"   , "Poner", "Mover", "Sacar", "IrAlBorde"
+                          , "Built-in procedures", "My procedures"
+						              , "RepeticionSimple"
+           , "EXPRESSIONS", "Color", "Direccion", "Numero"
+           , "DEFINITIONS", "procedures_defnoreturnnoparams"
            ]
 execution_speed:
   active: high
