--- a/Projects/2.Using procedures/3.The great adventure of the enchanted sea/meta.yml
+++ b/Projects/2.Using procedures/3.The great adventure of the enchanted sea/meta.yml
@@ -8,7 +8,8 @@ blocks:
   visible: [ "COMMANDS"   , "Poner", "Mover", "Sacar", "IrAlBorde"
                           , "Built-in procedures"
                           , "My procedures"
-           , "EXPRESSIONS", "Color", "Direccion"
+						              , "RepeticionSimple"
+           , "EXPRESSIONS", "Color", "Direccion", "Numero"
            , "DEFINITIONS", "procedures_defnoreturnnoparams"
            ]
 execution_speed:
@@ -18,8 +19,6 @@ inherit:
   $course: gobstonescourses/courseDemo 
   $assets:
     extra: true
-#    attires:
-#      - The alien pushes the button
   blocks:
     defaultToolbox: true
   board: true
