Minor improvements in toolboxes

--- a/Projects/1.First steps/1.The teacher, the farmer, and the gobstones/meta.yml
+++ b/Projects/1.First steps/1.The teacher, the farmer, and the gobstones/meta.yml
@@ -4,10 +4,9 @@ attire:
 blocks:
   disabled: [ "Poner", "Sacar", "Mover", "IrAlBorde"
             ]
-  visible:  [ "COMMANDS"
-            , "Poner", "Sacar", "Mover", "IrAlBorde"
-            , "Built-in procedures"
-            , "My procedures"
+  visible:  [ "COMMANDS", "Poner", "Sacar", "Mover", "IrAlBorde"
+                        , "Built-in procedures", "My procedures"   
+            , "DEFINITIONS", "procedures_defnoreturnnoparams"
             ]
 
 inherit:
