Project 4.2 translated. And some minor fixings with attires

--- a/Projects/1.First steps/3.Programming squares/meta.yml
+++ b/Projects/1.First steps/3.Programming squares/meta.yml
@@ -20,8 +20,8 @@ inherit:
   $course: gobstonescourses/courseDemo 
   $assets:
     extra: true
-  #  attires:
-  #    - Squares
+    attires:
+      - Squares
   blocks:
     defaultToolbox: true
   board: true
