--- a/Projects/2.Using procedures/1.The alien pushes the button/meta.yml
+++ b/Projects/2.Using procedures/1.The alien pushes the button/meta.yml
@@ -19,8 +19,8 @@ inherit:
   $course: gobstonescourses/courseDemo 
   $assets:
     extra: true
-#    attires:
-#      - The alien pushes the button
+    attires:
+      - The alien pushes the button
   blocks:
     defaultToolbox: true
   board: true
