--- a/Projects/3.Applications on teaching ideas/2.Converting images to grayscale/meta.yml
+++ b/Projects/3.Applications on teaching ideas/2.Converting images to grayscale/meta.yml
@@ -26,6 +26,8 @@ inherit:
   $course: gobstonescourses/courseDemo 
   $assets:
     extra: true
+    attires:
+     - RGB Colors
   blocks:
     defaultToolbox: true
   board:
