--- a/Projects/3.Applications on teaching ideas/4.Representing characters/meta.yml
+++ b/Projects/3.Applications on teaching ideas/4.Representing characters/meta.yml
@@ -21,6 +21,8 @@ inherit:
   $course: gobstonescourses/courseDemo 
   $assets:
     extra: true
+    attires:
+     - Letters
   blocks:
     defaultToolbox: true
   board: true
