--- a/Projects/2.Using procedures/2.We build 'The alien pushes the button'/meta.yml
+++ b/Projects/2.Using procedures/2.We build 'The alien pushes the button'/meta.yml
@@ -21,8 +21,8 @@ inherit:
   $course: gobstonescourses/courseDemo 
   $assets:
     extra: true
-#    attires:
-#      - The alien pushes the button
+    attires:
+      - The alien pushes the button
   blocks:
     defaultToolbox: true
   board: true
