--- a/Projects/3.Applications on teaching ideas/3.About compression of information/meta.yml
+++ b/Projects/3.Applications on teaching ideas/3.About compression of information/meta.yml
@@ -24,6 +24,8 @@ inherit:
   $course: gobstonescourses/courseDemo 
   $assets:
     extra: true
+    attires:
+     - RGB Colors
   blocks:
     defaultToolbox: true
   board:
