--- a/assets/meta-defaults.yml
+++ b/assets/meta-defaults.yml
@@ -87,7 +87,7 @@ blocks:
           <block type="Program"></block>
           <block type="InteractiveProgram"></block>
         </category>
-        <category name="Associations">
+        <category name="Events">
           <block type="InteractiveLetterBinding"></block>
           <block type="InteractiveNumberBinding"></block>
           <block type="InteractiveKeyBinding"></block>
