--- a/Projects/1.First steps/4.More squares, but easier/meta.yml
+++ b/Projects/1.First steps/4.More squares, but easier/meta.yml
@@ -11,7 +11,7 @@ blocks:
                           , "My procedures"
 						              , "RepeticionSimple"
            , "EXPRESSIONS", "Color", "Direccion", "Numero"
-           , "DEFINITIONS", "DefinicionDeProcedimientoSimple", "DefinicionDeProcedimiento"
+           , "DEFINITIONS", "procedures_defnoreturnnoparams" #"DefinicionDeProcedimientoSimple", "DefinicionDeProcedimiento"
            ]
 execution_speed:
   active: instantaneous
